[gd_scene load_steps=19 format=3 uid="uid://ccpuwmsxa5l71"]

[ext_resource type="Script" path="res://scripts/ui/difficulty_selection.gd" id="1_s112u"]
[ext_resource type="FontFile" uid="uid://cvw83mci4whso" path="res://assets/ui/fonts/Barcade-R4LM.otf" id="2_rajxs"]
[ext_resource type="FontFile" uid="uid://qsj5efyy2fb7" path="res://assets/ui/fonts/BarcadeNoBar-mzD9.otf" id="2_x82aa"]
[ext_resource type="Texture2D" uid="uid://cmyogaurry63" path="res://assets/ui/buttons/menu_buttons/normal/buttonsssss copy 5.png" id="4_cf2ll"]
[ext_resource type="Texture2D" uid="uid://c3e2xegruigho" path="res://assets/ui/buttons/menu_buttons/hovered/buttonsssss_On copy 6.png" id="5_2djrb"]
[ext_resource type="Texture2D" uid="uid://cpu5l3gg70keb" path="res://assets/ui/buttons/menu_buttons/pressed/button_on_pressed_7.png" id="5_kx8mx"]
[ext_resource type="Texture2D" uid="uid://d0177ophihhb0" path="res://assets/ui/buttons/menu_buttons/normal/buttonsssss copy 6.png" id="6_3vkvc"]
[ext_resource type="Texture2D" uid="uid://g630kbxtmt1p" path="res://assets/ui/buttons/menu_buttons/hovered/buttonsssss_On copy 5.png" id="7_1t4rb"]
[ext_resource type="Script" path="res://scripts/button/texture_button_sound.gd" id="7_mwa5a"]
[ext_resource type="Texture2D" uid="uid://c7ujwxf5n13cc" path="res://assets/ui/buttons/menu_buttons/pressed/button_on_pressed_4.png" id="8_03sp5"]
[ext_resource type="Texture2D" uid="uid://ba1syoi25nndy" path="res://assets/ui/buttons/menu_buttons/normal/buttonsssss.png" id="8_plife"]
[ext_resource type="Texture2D" uid="uid://cc2b7qd4rwuiu" path="res://assets/ui/buttons/menu_buttons/hovered/buttonsssss_On copy.png" id="9_yc6lx"]
[ext_resource type="Texture2D" uid="uid://d0yvvo8ggm0d4" path="res://assets/ui/buttons/menu_buttons/normal/buttonsssss copy 3.png" id="10_qcj4y"]
[ext_resource type="Texture2D" uid="uid://hqxffkgnt4ar" path="res://assets/ui/buttons/menu_buttons/pressed/button_on_pressed_5.png" id="11_6o7xv"]
[ext_resource type="Texture2D" uid="uid://dm1afjlptkexq" path="res://assets/ui/buttons/menu_buttons/hovered/buttonsssss_On copy 3.png" id="11_rahm0"]
[ext_resource type="Texture2D" uid="uid://ddqhyad85sx64" path="res://assets/ui/buttons/menu_buttons/pressed/button_on_pressed_6.png" id="14_j07a1"]

[sub_resource type="Theme" id="Theme_axbec"]
default_font = ExtResource("2_x82aa")
default_font_size = 70

[sub_resource type="Theme" id="Theme_rgwgv"]
default_font = ExtResource("2_rajxs")
default_font_size = 100

[node name="DifficultySelection" type="Node2D"]
script = ExtResource("1_s112u")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = SubResource("Theme_axbec")

[node name="Heading" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -508.0
offset_top = 133.0
offset_right = 508.0
offset_bottom = 257.0
grow_horizontal = 2
theme = SubResource("Theme_rgwgv")
text = "Difficulty selection"

[node name="BackButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1080.0
offset_top = -190.0
offset_right = -587.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(232, 121)
keep_pressed_outside = true
texture_normal = ExtResource("4_cf2ll")
texture_pressed = ExtResource("5_kx8mx")
texture_hover = ExtResource("5_2djrb")
stretch_mode = 3
script = ExtResource("7_mwa5a")

[node name="Label" type="Label" parent="Control/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -33.0
offset_right = 87.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="EasyButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -60.0
offset_right = 653.0
offset_bottom = 182.0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(232, 121)
keep_pressed_outside = true
texture_normal = ExtResource("6_3vkvc")
texture_pressed = ExtResource("8_03sp5")
texture_hover = ExtResource("7_1t4rb")
stretch_mode = 3
script = ExtResource("7_mwa5a")

[node name="Label" type="Label" parent="Control/EasyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -44.0
offset_right = 87.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Easy"

[node name="MediumButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.5
offset_top = -60.0
offset_right = 241.5
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(232, 121)
keep_pressed_outside = true
texture_normal = ExtResource("8_plife")
texture_pressed = ExtResource("11_6o7xv")
texture_hover = ExtResource("9_yc6lx")
stretch_mode = 3
script = ExtResource("7_mwa5a")

[node name="Label" type="Label" parent="Control/MediumButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -44.0
offset_right = 134.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Medium"

[node name="HardButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -653.0
offset_top = -60.0
offset_right = -160.0
offset_bottom = 182.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(232, 121)
keep_pressed_outside = true
texture_normal = ExtResource("10_qcj4y")
texture_pressed = ExtResource("14_j07a1")
texture_hover = ExtResource("11_rahm0")
stretch_mode = 3
script = ExtResource("7_mwa5a")

[node name="Label" type="Label" parent="Control/HardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -44.0
offset_right = 90.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Hard"

[connection signal="button_up" from="Control/BackButton" to="." method="_on_back_button_up"]
[connection signal="button_up" from="Control/EasyButton" to="." method="_on_easy_button_up"]
[connection signal="button_up" from="Control/MediumButton" to="." method="_on_medium_button_up"]
[connection signal="button_up" from="Control/HardButton" to="." method="_on_hard_button_up"]
